# jpp

./: .gitignore  CONTRIBUTING.md  README.md
include/: jpp.hh  json.hh
src/: jpp.cc  json.cc
test/: CMakeLists.txt  build.ps1  clean.ps1  clean.sh  start.ps1  start.sh  test.cc
test/json/: e1.json
